# cobra

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: verification.yml
crates/cobra-cli/: Cargo.toml
crates/cobra-cli/src/: main.rs
crates/cobra-core/: Cargo.toml
crates/cobra-core/src/: arith.rs  classification.rs  compiled.rs  evaluator.rs  expr.rs  expr_cost.rs  expr_rewrite.rs  expr_utils.rs  lib.rs  pass_contract.rs  profile.rs  result.rs  signature_eval.rs  signature_eval_stats.rs  signature_simplifier.rs  signature_vector.rs  simplify_outcome.rs  spot_check.rs  trace.rs
crates/cobra-ir/: Cargo.toml
crates/cobra-ir/src/: anf_cleanup.rs  anf_transform.rs  arithmetic_lowering.rs  basis_transform.rs  coeff_interpolator.rs  coefficient_splitter.rs  dynamic_mask.rs  lib.rs  masked_atom_reconstructor.rs  math_utils.rs  mono.rs  multivar_poly_recovery.rs  null_poly_generator.rs  packed_anf.rs  poly.rs  poly_expr_builder.rs  poly_normalizer.rs  semilinear.rs  semilinear_normalizer.rs  semilinear_signature.rs  singleton_power.rs  singleton_power_recovery.rs  structure_recovery.rs  term_refiner.rs
crates/cobra-orchestrator/: Cargo.toml
crates/cobra-orchestrator/src/: attempt_cache.rs  competition.rs  context.rs  continuation.rs  entry.rs  enums.rs  fingerprint.rs  join.rs  lib.rs  main_loop.rs  ranker.rs  registry.rs  scheduler.rs  state.rs  stubs.rs  work_item.rs  worklist.rs
crates/cobra-orchestrator/tests/: main_loop.rs
crates/cobra-parser/: Cargo.toml
crates/cobra-parser/src/: ast.rs  eval.rs  lib.rs  postfix.rs  token.rs
crates/cobra-passes/: Cargo.toml
crates/cobra-passes/src/: atom_identity_rewrite.rs  atom_simplifier.rs  aux_var.rs  bit_partitioner.rs  bitwise_decomposer.rs  build_signature_state.rs  candidate_normalize.rs  classifier.rs  classify_ast.rs  cob_expr_builder.rs  decomposition_engine.rs  decomposition_helpers.rs  entry.rs  extract_poly_core.rs  extract_product_core.rs  extract_template_core.rs  ghost_basis.rs  ghost_residual_solver.rs  hybrid_decomposer.rs  lib.rs  lift_arithmetic_atoms.rs  lift_repeated_subexpressions.rs  lifting.rs  lower_not_over_arith.rs  mapped_evaluator.rs  mixed_product_rewriter.rs  not_over_arith.rs  npn4_canonical.rs  operand_simplify.rs  pattern_matcher.rs  prepare_coeff_model.rs  prepare_direct_remainder.rs  prepare_lifted_outer_solve.rs  prepare_remainder_from_core.rs  product_identity_collapse.rs  proof_coverage.rs  residual_common.rs  residual_factored_ghost.rs  residual_ghost.rs  residual_poly_recovery.rs  (+22 more)
crates/cobra-passes/tests/: generated_lean_replay.rs  pipeline.rs  upstream_simplifier.rs
crates/cobra-simd/: Cargo.toml
crates/cobra-simd/src/: lib.rs
crates/cobra-testkit/: Cargo.toml
crates/cobra-testkit/src/: lib.rs
crates/cobra-testkit/tests/: datasets.rs
crates/cobra-verify/: Cargo.toml
crates/cobra-verify/src/: lean_cert.rs  lean_emit.rs  lib.rs  null.rs  z3_backend.rs
datasets/gamba/: mba_flatten.txt
formal/lean/: Cobra.lean  HANDOFF.md  README.md  lake-manifest.json  lakefile.lean
formal/lean/Cobra/: Bytecode.lean  Cert.lean  Core.lean  Signature.lean
