[package]
name = "cobra-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CoBRA command-line driver: parse → simplify → print"

[[bin]]
name = "cobra"
path = "src/main.rs"

[features]
default = []
z3 = ["dep:cobra-verify", "cobra-verify/z3"]

[dependencies]
cobra-core = { path = "../cobra-core" }
cobra-ir = { path = "../cobra-ir" }
cobra-orchestrator = { path = "../cobra-orchestrator" }
cobra-parser = { path = "../cobra-parser" }
cobra-passes = { path = "../cobra-passes" }
cobra-verify = { path = "../cobra-verify", optional = true }
clap = { version = "4", features = ["derive"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
