[package]
name = "cobra-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CoBRA intermediate representations: PolyIR, SemilinearIR, SingletonPowerPoly, PackedAnf, DynamicMask"

[dependencies]
cobra-core = { path = "../cobra-core" }
ahash = { workspace = true }
hashbrown = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
