[package]
name = "cobra-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CoBRA worklist-driven scheduler: state machine, work items, competition groups, pass registry"

[dependencies]
cobra-core = { path = "../cobra-core" }
cobra-ir = { path = "../cobra-ir" }
cobra-verify = { path = "../cobra-verify" }
ahash = { workspace = true }
indexmap = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
