[package]
name = "cobra-simd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CoBRA gate kernels — 16-lane u64 bitwise/arithmetic evaluation with optional wide-crate SIMD backend"

[features]
default = ["simd"]
# Enable the portable-SIMD (wide crate) backend. Without this feature the
# scalar fallback is used.
simd = ["dep:wide"]

[dependencies]
wide = { workspace = true, optional = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
