[package]
name = "cobra-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CoBRA dataset harness: load input,expected pairs and run them through the pipeline"

[[bin]]
name = "cobra-sweep"
path = "src/bin/sweep.rs"

[dependencies]
cobra-core = { path = "../cobra-core" }
cobra-orchestrator = { path = "../cobra-orchestrator" }
cobra-parser = { path = "../cobra-parser" }
cobra-passes = { path = "../cobra-passes" }
clap = { version = "4", features = ["derive"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
